<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     LM AudioSpy is an audio recording app for Android version 5.1
  ~     Copyright (C) 2017-2018 Loremar Marabillas
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/black"
        android:stretchColumns="0"
        android:keepScreenOn="true">

        <TableRow>
            <TextView
                android:id="@+id/doubletapText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doubletap_start"
                android:textSize="12sp"/>

            <android.support.constraint.ConstraintLayout>
                <ImageView
                    android:id="@+id/redCircle"
                    android:src="@drawable/red_circle"
                    android:layout_height="12dp"
                    android:layout_width="12dp"
                    app:layout_constraintEnd_toStartOf="@id/recordingText"
                    app:layout_constraintBottom_toBottomOf="@id/recordingText"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="5dp"
                    android:adjustViewBounds="true"
                    android:maxHeight="12dp"
                    android:maxWidth="12dp"
                    tools:ignore="ContentDescription"/>
                <TextView
                    android:id="@+id/recordingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recording"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="10dp"/>
            </android.support.constraint.ConstraintLayout>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/logText"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="12sp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/convertProgressText"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
    </TableLayout>
    <marabillas.loremar.lmaudiospy.TouchableImageView
        android:id="@+id/key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/key"
        android:contentDescription="@string/key_to_unclock_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>
    <ImageView
        android:id="@+id/lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/locked"
        android:contentDescription="@string/lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/swipe_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/swipe_right_to_unlock"
        app:layout_constraintStart_toEndOf="@id/key"
        app:layout_constraintBottom_toBottomOf="@id/key"
        app:layout_constraintTop_toTopOf="@id/key"/>
</android.support.constraint.ConstraintLayout>