<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     LM AudioSpy is an audio recording app for Android version 5.1
  ~     Copyright (C) 2017-2018 Loremar Marabillas
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/opened_directory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recordingsView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recordingsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/opened_directory"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="outsideInset"
        android:fadeScrollbars="false">
    </android.support.v7.widget.RecyclerView>
    <marabillas.loremar.lmaudiospy.TouchableImageView
        android:id="@+id/play_button"
        android:src="@drawable/large_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="ContentDescription"
        app:layout_constraintEnd_toEndOf="@id/recordingsView"
        app:layout_constraintTop_toBottomOf="@id/recordingsView"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="@id/play_button"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/rename_button_in_open_save_directory"
        android:background="@drawable/button_background"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/rename"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/recordingsView"
        app:layout_constraintStart_toStartOf="@id/recordingsView"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/send_button_in_open_save_directory"
        android:background="@drawable/button_background"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/recordingsView"
        app:layout_constraintTop_toBottomOf="@id/rename_button_in_open_save_directory"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/delete_button_in_open_save_directory"
        android:background="@drawable/button_background"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/recordingsView"
        app:layout_constraintTop_toBottomOf="@id/send_button_in_open_save_directory"
        android:layout_marginTop="10dp"
        />
</android.support.constraint.ConstraintLayout>